# circt

docs/: RationaleGAA.md
include/circt/Dialect/: CMakeLists.txt
include/circt/Dialect/FIRRTL/: Passes.h  Passes.td
include/circt/Dialect/GAA/: CMakeLists.txt  CallGraph.h  GAA.td  GAADialect.h  GAAOpInterfaces.h  GAAOpInterfaces.td  GAAOps.h  GAAOps.td  GAAPasses.h  GAAPasses.td  GAATypes.h  GAATypes.td
include/circt/Dialect/SV/: SVExpressions.td
lib/Conversion/ExportVerilog/: ExportVerilog.cpp  ExportVerilogInternals.h  LegalizeNames.cpp  PrepareForEmission.cpp
lib/Conversion/FIRRTLToHW/: LowerToHW.cpp
lib/Dialect/FIRRTL/: FIRRTLOps.cpp
lib/Dialect/FIRRTL/Transforms/: CMakeLists.txt  GrandCentral.cpp  GrandCentralTaps.cpp  IMConstProp.cpp  LowerTypes.cpp  ModuleInliner.cpp  RemoveUnusedPorts.cpp
lib/Dialect/GAA/: CMakeLists.txt  GAADialect.cpp  GAAOps.cpp  GAATypes.cpp
lib/Dialect/GAA/Transforms/: Analysis.cpp  CMakeLists.txt  GenerateConflictMatrix.cpp
lib/Dialect/HW/: HWAttributes.cpp
test/Conversion/ExportVerilog/: hw-dialect.mlir
test/Dialect/FIRRTL/: grand-central.mlir  inliner.mlir  remove-unused-ports.mlir
test/Dialect/GAA/: gcd.mlir
tools/firtool/: firtool.cpp
